<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph2"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.rad.app.FragmentMain"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_FourthFragment"
            app:destination="@id/FourthFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.rad.app.FragmentFourBand"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_four_bands">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="bandType"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.rad.app.FragmentFiveBand"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_five_bands" >
        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="bandType"
            app:argType="integer"
            android:defaultValue="1" />
    </fragment>
    <fragment
        android:id="@+id/FourthFragment"
        android:name="com.rad.app.FragmentSixBand"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_six_bands" >
        <action
            android:id="@+id/action_FourthFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="bandType"
            app:argType="integer"
            android:defaultValue="2" />
    </fragment>
</navigation>