<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/md_theme_surfaceContainer"
        app:strokeColor="@color/md_theme_surfaceContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <LinearLayout
            android:id="@+id/LinearLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <WebView
                android:id="@+id/WebView6BandsResistor"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <LinearLayout
                android:id="@+id/LinearLayoutHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextViewHeaderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_band_resistor_model"
                    android:textColor="@color/md_theme_primary"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/TextViewHeaderSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six_band_resistor_model_tip"
                    android:textColor="@color/md_theme_onSurfaceVariant"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/ButtonSixBands"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:text="@string/button_go" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>