<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rad.app.FragmentSixBand">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/CardView6BandResistor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/md_theme_surfaceContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/md_theme_surfaceContainer">

            <LinearLayout
                android:id="@+id/LinearLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                    <TextView
                        android:id="@+id/TextViewOutput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/output_title"
                        android:textColor="@color/md_theme_primary"
                        android:textSize="24sp" />

                <WebView
                    android:id="@+id/WebView6BandsResistor"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:background="@android:color/transparent"
                    android:transitionName="shared_view" />

                <TextView
                    android:id="@+id/TextViewResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:visibility="gone"
                    tools:visibility="gone" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/CardViewTip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/md_theme_tertiaryContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CardView6BandResistor"
            app:strokeColor="@color/md_theme_tertiaryContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/materialCardView"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:scaleType="centerInside"
                    android:src="@drawable/drawable_lightbulb"
                    android:tint="@color/md_theme_onTertiaryContainer">

                </com.google.android.material.imageview.ShapeableImageView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/TextViewTip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:padding="16dp"
                    android:text="@string/tip_resistor_reading"
                    android:textColor="@color/md_theme_onTertiaryContainer"
                    android:textSize="14sp">

                </com.google.android.material.textview.MaterialTextView>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/CardViewResistorParameters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/md_theme_surfaceContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CardViewTip"
            app:strokeColor="@color/md_theme_surfaceContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/TextViewResistorParametersTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/resistor_parameters_title"
                            android:textColor="@color/md_theme_primary"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/TextViewResistorParametersSubTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/resistor_parameters_subtitle" />
                    </LinearLayout>

                    <Button
                        style="?attr/materialIconButtonFilledStyle"
                        android:id="@+id/ButtonReset"
                        android:contentDescription="@string/button_reset_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/drawable_reset" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_band_hint">

                        <AutoCompleteTextView
                            android:id="@+id/DropdownFirstBand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:tag="firstBand"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/second_band_hint">

                        <AutoCompleteTextView
                            android:id="@+id/DropdownSecondBand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:tag="secondBand"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/third_band_hint"
                        android:orientation="horizontal">

                        <AutoCompleteTextView
                            android:id="@+id/DropdownThirdBand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:tag="thirdBand"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/multiplier_band_hint">

                        <AutoCompleteTextView
                            android:id="@+id/DropdownMultiplierBand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:tag="multiplierBand"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/tolerance_band_hint">

                        <AutoCompleteTextView
                            android:id="@+id/DropdownToleranceBand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:tag="toleranceBand"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/ppm_band_hint"
                        android:orientation="horizontal">

                        <AutoCompleteTextView
                            android:id="@+id/DropdownPPMToleranceBand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:tag="ppmBand"
                            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>